# temporal-samples-rust

./: README.md
activities-cancellation-heartbeating/: Cargo.toml  README.md
activities-cancellation-heartbeating/src/: worker.rs  workflows.rs
activities-cancellation-heartbeating/src/activities/: cleanup_activity.rs  fake_progress.rs  fake_progress_activity.rs  mod.rs  skipped_activity.rs
activities-examples/: Cargo.toml  README.md
activities-examples/src/: README.md  client.rs  lib.rs  main.rs  worker.rs  workflows.rs
activities-examples/src/activities/: async_completion.rs  helpers.rs  make_http_request.rs  mod.rs
activities-examples/src/helpers/: mod.rs  parse_activity_result.rs
schedule/: Cargo.toml  README.md
schedule/src/: lib.rs  worker.rs  workflows.rs
temporal-helpers/: Cargo.toml  README.md
temporal-helpers/src/: lib.rs
timer/: Cargo.toml  README.md
timer/src/: worker.rs  workflows.rs
timer/src/activities/: mod.rs  order_processing_activity.rs  send_email_activity.rs
