[package]
name = "activities-examples"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.71"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.14"
nanoid = "0.4.0"
prost-wkt-types = "0.4.1"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
temporal-client = { path = "../../sdk-core/client" }
temporal-sdk = { path = "../../sdk-core/sdk" }
temporal-sdk-core = { path = "../../sdk-core/core" }
temporal-sdk-core-api = { path = "../../sdk-core/core-api" }
tokio = { version = "1.28.1", features = ["full"] }